# agentomatic

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  BUGS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  Dockerfile.distroless  LICENSE  Makefile  README.md  TODO.md  comprehensive_test.py  docker-compose.yml  mkdocs.yml  nginx.conf  pyproject.toml  pytest.ini  quick_fix_test.py  quick_test.py  requirements-dev.txt  versions.json
.agents/: AGENTS.md
.agents/skills/agentomatic/: SKILL.md
.cursor/skills/agentomatic/: SKILL.md
.github/: FUNDING.yml
.github/workflows/: ci.yml  docs.yml  manual-docs.yml  manual-pypi.yml  pr-checks.yml  release.yml  sync-studio.yml
.optimize/: fit_result_22c6112c130b.json  fit_result_63a30b48776f.json  fit_result_9eab3338e3bf.json  fitter_report_22c6112c130b.html  fitter_report_63a30b48776f.html  fitter_report_9eab3338e3bf.html
0.1.0/: 404.html  sitemap.xml
0.1.0/architecture/api-reference/: index.html
0.1.0/architecture/overview/: index.html
0.1.0/changelog/: index.html
0.1.0/cli/commands/: index.html
0.1.0/getting-started/first-agent/: index.html
0.1.0/getting-started/installation/: index.html
0.1.0/getting-started/quickstart/: index.html
0.1.0/guide/configuration/: index.html
0.1.0/guide/telemetry/: index.html
0.1.0/search/: search_index.json
0.1.1/: 404.html  sitemap.xml
0.1.1/architecture/overview/: index.html
0.1.1/changelog/: index.html
0.1.1/cli/commands/: index.html
0.1.1/getting-started/installation/: index.html
0.1.1/getting-started/quickstart/: index.html
0.1.1/guide/agent-structure/: index.html
0.1.1/guide/middleware/: index.html
0.1.1/guide/prompts/: index.html
0.1.1/guide/telemetry/: index.html
0.1.1/guide/templates/: index.html
0.10.0/: index.html
0.10.0/guide/middleware/: index.html
0.10.0/guide/prompts/: index.html
0.2.0/: sitemap.xml
0.2.0/cli/commands/: index.html
0.2.0/guide/agent-structure/: index.html
0.2.0/guide/configuration/: index.html
0.2.0/guide/templates/: index.html
0.2.0/search/: search_index.json
0.3.0/FRONTEND_API_GUIDE/: index.html
0.3.0/architecture/api-reference/: index.html
0.3.0/changelog/: index.html
0.3.0/getting-started/quickstart/: index.html
0.3.0/guide/configuration/: index.html
0.3.0/guide/optimization/: index.html
0.3.0/guide/schemas/: index.html
0.3.0/search/: search_index.json
0.4.1/: sitemap.xml
0.4.1/FRONTEND_API_GUIDE/: index.html
0.4.1/architecture/api-reference/: index.html
0.4.1/cli/commands/: index.html
0.4.1/guide/demo/: index.html
0.4.1/guide/optimization/: index.html
0.4.1/guide/telemetry/: index.html
0.5.1/: index.html
0.5.1/architecture/overview/: index.html
0.5.1/guide/templates/: index.html
0.5.1/search/: search_index.json
0.6.0/: 404.html
0.6.0/getting-started/first-agent/: index.html
0.6.0/getting-started/installation/: index.html
0.6.0/guide/deep-agents/: index.html
0.6.0/guide/langgraph/: index.html
0.6.0/guide/optimization/: index.html
0.8.0/search/: search_index.json
0.9.0/changelog/: index.html
0.9.0/stylesheets/: extra.css
1.0.0/: sitemap.xml
1.0.0/changelog/: index.html
1.1.0/: 404.html  index.html
1.1.0/changelog/: index.html
1.10.0/changelog/: index.html
1.2.0/: index.html  sitemap.xml
1.2.0/search/: search_index.json
1.3.0/: sitemap.xml
1.3.0/changelog/: index.html
1.4.0/contributing/: index.html
1.5.0/: index.html
1.5.0/search/: search_index.json
1.5.1/contributing/: index.html
1.6.0/overrides/: main.html
1.8.1/: sitemap.xml
1.8.1/changelog/: index.html
agents/: demo_agent.py
deploy/observability/: README.md  docker-compose.yml
dev/: 404.html  index.html  sitemap.xml
dev/FRONTEND_API_GUIDE/: index.html
dev/changelog/: index.html
dev/contributing/: index.html
dev/search/: search_index.json
docs/: FRONTEND_API_GUIDE.md  changelog.md  contributing.md  index.md
docs/architecture/: api-reference.md  overview.md
docs/cli/: commands.md
docs/getting-started/: concepts.md  first-agent.md  installation.md  quickstart.md
docs/guide/: agent-structure.md  class-agents.md  configuration.md  connections.md  control-plane.md  cookbook.md  custom-connections.md  debug-ui.md  deep-agents.md  delegation.md  demo.md  deployment.md  endpoints.md  ingestion.md  langgraph.md  llm-providers.md  middleware.md  ml-plugins.md  observability.md  optimization.md  pipelines.md  platform-features.md  prompts.md  schemas.md  security.md  stacks.md  status.md  storage.md  studio.md  tasks.md  telemetry.md  templates.md  testing.md
e2e_demo/: run_demo.py
examples/full_agent/: README.md  main.py
examples/hello_agent/: main.py
examples/scooper-ai-core/: README.md
plugins/my_classifier/: plugin.py
prompts/: agent_alpha_prompts.py
scripts/: build_studio.sh  strip_commit_msg_ansi.py
src/: __init__.py
src/agentomatic/: __init__.py  _runtime.py  _version.py  async_utils.py
src/agents/: __init__.py
src/app/: api.py  dependencies.py  main.py  settings.py
src/common/: __init__.py  agent_state.py  api_decorators.py  base_agent.py  llm_factory.py  prompt_manager.py  utilities.py
tests/: final_validation.py  quick_test.py  quick_validation.py  run_comprehensive_tests.py  test_agent_allowlist.py  test_agent_dataset.py  test_agent_endpoints.py  test_agent_graph.py  test_agent_graph_stream.py  test_agent_lifecycle.py  test_agent_metrics.py  test_agentomatic.py  test_agents_guide.py  test_all_methods_extensive.py  test_app.py  test_artifacts_registry.py  test_async_utils.py  test_audit.py  test_base_graph_agent.py  test_bugfixes_041.py  test_claims.py  test_class_agent_server_paths.py  test_cli.py  test_cli_settings.py  test_connections.py  test_control_plane.py  test_coverage_boost.py  test_custom_client_integration.py  test_custom_vector_provider.py  test_deep_agent.py  test_delegation.py  test_deploy_cli.py  test_docker.py  test_dpop.py  test_e2e.py  test_embeddings_azure.py  test_endpoints.py  test_eval_api_and_holysheet.py  test_execution_modes.py  test_final_implementation.py  (+54 more)
(+426 files in other folders)
