[tool.poetry]
name = "vision-backend"
version = "0.1.0"
description = "Scalable multi-agent architecture based on LangGraph and FastAPI"
authors = ["Vision Team <team@vision.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
fastapi = "^0.115.12"
uvicorn = {extras = ["standard"], version = "^0.32.0"}
pydantic = "^2.9.0"
pydantic-settings = "^2.6.0"
loguru = "^0.7.2"
langchain = "^0.3.25"
langchain-community = "^0.3.0"
langchain-core = "^0.3.64"
langchain-ollama = "^0.2.0"
langchain-google-vertexai = "^2.0.24"
langgraph = "^0.4.8"
ollama = "^0.4.0"
aiofiles = "^24.1.0"
python-multipart = "^0.0.12"
httpx = "^0.28.0"
typing-extensions = "^4.12.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.0"
pytest-asyncio = "^0.24.0"
pytest-cov = "^6.0.0"
pytest-mock = "^3.14.0"
pytest-xdist = "^3.6.0"
pytest-timeout = "^2.3.1"
pytest-html = "^4.1.1"
pytest-json-report = "^1.5.0"
black = "^24.10.0"
isort = "^5.13.0"
mypy = "^1.13.0"
flake8 = "^7.1.0"
bandit = "^1.8.0"
pre-commit = "^4.0.0"
jupyter = "^1.1.0"
ipython = "^8.29.0"
mkdocs = "^1.6.0"
mkdocs-material = "^9.5.0"
prometheus-client = "^0.21.0"
sentry-sdk = {extras = ["fastapi"], version = "^2.17.0"}
structlog = "^24.4.0"
docker = "^7.1.0"
requests = "^2.32.0"
psutil = "^6.0.0"
uvloop = "^0.20.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''


[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers --strict-config"
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]

[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/test_*",
    "*/__pycache__/*",
    "*/venv/*",
    "*/env/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.bandit]
exclude_dirs = ["tests", "venv", "env"]
skips = ["B101", "B601"]