[project]
name = "agentomatic"
version = "0.1.0"
description = "Drop agents, not code — zero-code multi-agent API platform framework"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [{name = "Piotr Laczkowski"}]
keywords = ["agents", "langgraph", "langchain", "fastapi", "multi-agent", "a2a", "framework"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: FastAPI",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Typing :: Typed",
]

dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "loguru>=0.7",
    "httpx>=0.28",
    "typing-extensions>=4.12",
    "pyyaml>=6.0",
    "python-multipart>=0.0.12",
]

[project.optional-dependencies]
langgraph = ["langgraph>=0.4", "langchain-core>=0.3"]
langchain = ["langchain>=0.3", "langchain-core>=0.3", "langchain-community>=0.3"]
ollama = ["langchain-ollama>=0.2", "ollama>=0.4"]
openai = ["langchain-openai>=0.3"]
azure = ["langchain-openai>=0.3"]
vertex = ["langchain-google-vertexai>=2.0"]
metrics = ["prometheus-client>=0.21"]
db = ["sqlalchemy[asyncio]>=2.0", "aiosqlite>=0.20"]
db-postgres = ["sqlalchemy[asyncio]>=2.0", "asyncpg>=0.30", "psycopg[binary]>=3.2"]
all = ["agentomatic[langgraph,ollama,metrics,db]"]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6.0",
    "pytest-mock>=3.14",
    "ruff>=0.8",
    "mypy>=1.13",
]

[project.scripts]
agentomatic = "agentomatic.cli.commands:main"

[project.urls]
Homepage = "https://github.com/piotrlaczkowski/agentomatic"
Documentation = "https://github.com/piotrlaczkowski/agentomatic#readme"
Repository = "https://github.com/piotrlaczkowski/agentomatic"
Issues = "https://github.com/piotrlaczkowski/agentomatic/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agentomatic"]

[tool.ruff]
line-length = 99
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["agentomatic"]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers"
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "slow: marks tests as slow",
    "integration: integration tests",
]

[tool.coverage.run]
source = ["src/agentomatic"]
omit = ["*/tests/*", "*/__pycache__/*"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
check_untyped_defs = true