[project]
name = "agentomatic"
version = "0.4.0"
description = "Drop agents, not code — zero-code multi-agent API platform framework"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [{name = "UnicoLab", email = "contact@unicolab.com"}]
keywords = ["agents", "langgraph", "langchain", "fastapi", "multi-agent", "a2a", "framework"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: FastAPI",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Typing :: Typed",
]
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "loguru>=0.7",
    "httpx>=0.28",
    "typing-extensions>=4.12",
    "pyyaml>=6.0",
    "python-multipart>=0.0.12",
    "click>=8.1.0",
]

[project.optional-dependencies]
langgraph = ["langgraph>=0.4", "langchain-core>=0.3"]
langchain = ["langchain>=0.3", "langchain-core>=0.3", "langchain-community>=0.3"]
ollama = ["langchain-ollama>=0.2", "ollama>=0.4"]
openai = ["langchain-openai>=0.3"]
azure = ["langchain-openai>=0.3"]
vertex = ["langchain-google-vertexai>=2.0"]
metrics = ["prometheus-client>=0.21"]
db = ["sqlalchemy[asyncio]>=2.0", "aiosqlite>=0.20"]
db-postgres = ["sqlalchemy[asyncio]>=2.0", "asyncpg>=0.30", "psycopg[binary]>=3.2"]
cli = ["rich>=13.0", "questionary>=2.0"]
ui = ["chainlit>=2.0"]
studio = []  # No extra deps — built React UI served via FastAPI StaticFiles
optimize = ["deepeval>=2.0", "holysheet>=0.1"]
telemetry = [
    "opentelemetry-api>=1.20",
    "opentelemetry-sdk>=1.20",
    "opentelemetry-instrumentation-fastapi>=0.40",
    "opentelemetry-instrumentation-httpx>=0.40",
]
all = ["agentomatic[langgraph,ollama,metrics,db,cli,studio,optimize,telemetry]"]
docs = [
    "mkdocs-material>=9.5",
    "mike>=2.1",
    "pymdown-extensions>=10.0",
]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6.0",
    "pytest-mock>=3.14",
    "ruff>=0.8",
    "mypy>=1.13",
    "pre-commit>=4.0",
    "build>=1.0",
    "twine>=6.0",
]

[project.scripts]
agentomatic = "agentomatic.cli.commands:cli"

[project.urls]
Homepage = "https://github.com/UnicoLab/agentomatic"
Documentation = "https://unicolab.github.io/agentomatic"
Repository = "https://github.com/UnicoLab/agentomatic"
Issues = "https://github.com/UnicoLab/agentomatic/issues"
Changelog = "https://github.com/UnicoLab/agentomatic/blob/main/CHANGELOG.md"



[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6.0",
    "pytest-mock>=3.14",
    "ruff>=0.8",
    "mypy>=1.13",
    "pre-commit>=4.0",
    "build>=1.0",
    "twine>=6.0",
    "python-semantic-release>=9.0",
]
docs = [
    "mkdocs-material>=9.5",
    "mike>=2.1",
    "pymdown-extensions>=10.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agentomatic"]

# The Studio UI static files at src/agentomatic/studio/static/ are
# automatically included because they are inside the package directory.
# These files are synced from the agentomatic-studio repo via CI/CD.
# To manually build: ./scripts/build_studio.sh

[tool.hatch.build.targets.sdist]
include = ["src/agentomatic/**", "tests/**", ".agents/**", "README.md", "LICENSE", "pyproject.toml"]

# ---------------------------------------------------------------------------
# Semantic Release
# ---------------------------------------------------------------------------
[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
version_variables = ["src/agentomatic/_version.py:__version__"]
branch = "main"
commit_message = "chore(release): v{version}"
build_command = ""
upload_to_pypi = false

[tool.semantic_release.changelog]
template_dir = "templates"

[tool.semantic_release.changelog.default_templates]
changelog_file = "CHANGELOG.md"

[tool.semantic_release.commit_parser_options]
allowed_tags = ["feat", "fix", "docs", "chore", "test", "ci", "refactor", "perf", "style", "build"]
minor_tags = ["feat"]
patch_tags = ["fix", "perf"]

# ---------------------------------------------------------------------------
# Ruff
# ---------------------------------------------------------------------------
[tool.ruff]
line-length = 99
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["agentomatic"]

# ---------------------------------------------------------------------------
# Pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers"
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "slow: marks tests as slow",
    "integration: integration tests",
]

# ---------------------------------------------------------------------------
# Coverage
# ---------------------------------------------------------------------------
[tool.coverage.run]
source = ["src/agentomatic"]
omit = ["*/tests/*", "*/__pycache__/*"]

[tool.coverage.report]
show_missing = true
fail_under = 55
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__",
]

# ---------------------------------------------------------------------------
# Mypy
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.11"
warn_return_any = false
warn_unused_configs = true
check_untyped_defs = true
explicit_package_bases = true
mypy_path = "src"

# Pydantic models with Field(default=...) trigger false call-arg errors
[[tool.mypy.overrides]]
module = [
    "agentomatic.studio.adapters.*",
    "agentomatic.studio.graph_inspector",
    "agentomatic.studio.router",
    "agentomatic.studio.run_tracker",
    "agentomatic.demo.*",
    "agentomatic.optimize.*",
]
disable_error_code = ["call-arg", "override", "misc", "attr-defined"]

